TEXT to PASSWORD

--- a/Tauken Ruslan/index.html
+++ b/Tauken Ruslan/index.html
@@ -19,7 +19,7 @@
         <input type="text" name="email" id="email">
         <br>
         <label for="password">Password</label>
-        <input type="text" name="password" id="password">
+        <input type="password" name="password" id="password">
         <br>
         <label for="con_password">Confirm Password</label>
         <input type="text" name="con_password" id="con_password">
