--- a/Main.html
+++ b/Main.html
@@ -77,7 +77,7 @@
         <label for="AddInfo">Additional info:</label>
         <input type="text" name="AddInfo" id="AddInfo" required>
         <br>
-        <input type="submit" value="Register">
+        <button type="submit" class="register-btn" onclick="window.location.href='Registered.html'">Register</button>
       </form>
     </div>
 </body>
