--- a/Registered.html
+++ b/Registered.html
@@ -13,5 +13,11 @@
     <div class="MrBeast">
         <img src="https://media.tenor.com/_grki90dacAAAAAM/mrbeast-dancing.gif" alt="MrBeast">
     </div>
+    <audio autoplay>
+        <video autoplay loop style="display:none;">
+            <source src="MrBeast.mp4" type="video/mp4">
+        </video>
+        
+    </audio>
 </body>
 </html>
