--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 <input type="password" required placeholder="Repeat password">
             </div>
             <div class="input-group">
-                <button type="submit" class="btn">Registration</button>
+                <button type="submit" id="play-sound" class="btn">Registration</button>
             </div>
             <p class="login-link">Already have an account? <a href="#">Sign in</a></p>
         </form>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
